improve skills section, move styles

--- a/index.html
+++ b/index.html
@@ -1,95 +1,89 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Portfolio</title>
     <link rel="icon" type="image/x-icon" href="/assets/code.ico">
+    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/css/all.min.css"
+        integrity="sha512-Kc323vGBEqzTmouAECnVceyQqyqdsSiqLQISBL29aUW4U/M7pSPA/gEUZQqv1cwx4OnYxTxve5UMg5GT6L4JJg=="
+        crossorigin="anonymous" referrerpolicy="no-referrer" />
 </head>
-<style>
-    @import url('https://fonts.googleapis.com/css2?family=Nunito+Sans:ital,opsz,wght@0,6..12,200..1000;1,6..12,200..1000&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap');
-    * {
-        font-family: "Roboto", sans-serif;
-        font-weight: 300;
-        font-style: normal;
-    }
-    .content {
-        width: 600px;
-        display: flex;
-        flex-direction: column;
-        margin: 60px auto 0 auto;
-    }
 
-    h3 {
-        font-weight: 500;
-    }
-
-    .header {
-        display: flex;
-        justify-content: space-between;
-        align-items: center;
-    }
-
-    .info {
-        display: flex;
-        flex-direction: column;
-    }
-
-    .name {
-        font-size: 35px;
-        font-weight: 400;
-    }
-
-    .role {
-        font-size: 15px;
-        font-weight: 300;
-    }
-
-    .location {
-        padding-top: 5px;
-        font-size: 15px;
-        font-weight: 100;
-        font-style: italic;
-    }
-
-    .image {
-        border-radius: 15px;
-    }
-
-    .about {
-        margin-top: 35px;
-    }
-</style>
 <body>
     <div class="content">
-        <div class="header">
+        <section class="header">
             <div class="info">
                 <span class="name">Jesus Salcedo</span>
                 <span class="role">Full Stack JavaScript Developer +4 years</span>
                 <span class="location">Bogota, Colombia</span>
             </div>
             <img class="image" src="/assets/photo.jpeg" alt="image" height="85" width="80">
-        </div>
+        </section>
         <div class="about">
             <h3>About me</h3>
-            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dolor architecto laboriosam repellat! Error, itaque? Corporis iste animi eum alias voluptates doloribus, ipsum dolore vitae aliquam error laborum ut quidem pariatur.</p>
+            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dolor architecto laboriosam repellat! Error,
+                itaque? Corporis iste animi eum alias voluptates doloribus, ipsum dolore vitae aliquam error laborum ut
+                quidem pariatur.</p>
         </div>
         <div class="experience">
             <h3>Professional Experience</h3>
-            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dolor architecto laboriosam repellat! Error, itaque? Corporis iste animi eum alias voluptates doloribus, ipsum dolore vitae aliquam error laborum ut quidem pariatur.</p>
+            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dolor architecto laboriosam repellat! Error,
+                itaque? Corporis iste animi eum alias voluptates doloribus, ipsum dolore vitae aliquam error laborum ut
+                quidem pariatur.</p>
         </div>
         <div class="experience">
             <h3>Education</h3>
-            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dolor architecto laboriosam repellat! Error, itaque? Corporis iste animi eum alias voluptates doloribus, ipsum dolore vitae aliquam error laborum ut quidem pariatur.</p>
+            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dolor architecto laboriosam repellat! Error,
+                itaque? Corporis iste animi eum alias voluptates doloribus, ipsum dolore vitae aliquam error laborum ut
+                quidem pariatur.</p>
         </div>
         <div class="projects">
             <h3>Projects</h3>
-            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dolor architecto laboriosam repellat! Error, itaque? Corporis iste animi eum alias voluptates doloribus, ipsum dolore vitae aliquam error laborum ut quidem pariatur.</p>
+            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dolor architecto laboriosam repellat! Error,
+                itaque? Corporis iste animi eum alias voluptates doloribus, ipsum dolore vitae aliquam error laborum ut
+                quidem pariatur.</p>
         </div>
-        <div class="skills">
+        <section class="skills">
             <h3>Skills</h3>
-            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dolor architecto laboriosam repellat! Error, itaque? Corporis iste animi eum alias voluptates doloribus, ipsum dolore vitae aliquam error laborum ut quidem pariatur.</p>
-        </div> 
+            <div class="skills-container">
+                <span class="skill-box">
+                    <i class="fa-brands fa-html5"></i>
+                    HTML
+                </span>
+                <span class="skill-box">
+                    <i class="fa-brands fa-css3-alt"></i>
+                    CSS
+                </span>
+                <span class="skill-box">
+                    <i class="fa-brands fa-js"></i>
+                    JavaScript
+                </span>
+                <span class="skill-box">TypeScript</span>
+                <span class="skill-box">MySQL</span>
+                <span class="skill-box">
+                    <i class="fa-brands fa-git-alt"></i>
+                    Git
+                </span>
+                <span class="skill-box">
+                    <i class="fa-brands fa-github"></i>
+                    Github
+                </span>
+                <span class="skill-box">
+                    <i class="fa-brands fa-gitlab"></i>
+                    Gitlab
+                </span>
+                <span class="skill-box">
+                    <i class="fa-brands fa-react"></i>
+                    React</span>
+                <span class="skill-box">
+                    <i class="fa-brands fa-docker"></i>
+                    Docker</span>
+            </div>
+        </section>
     </div>
 </body>
+
 </html>
