--- a/index.html
+++ b/index.html
@@ -22,30 +22,41 @@
             </div>
             <img class="image" src="/assets/photo.jpeg" alt="image" height="85" width="80">
         </section>
-        <div class="about">
+        <section class="about">
             <h3>About me</h3>
-            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dolor architecto laboriosam repellat! Error,
-                itaque? Corporis iste animi eum alias voluptates doloribus, ipsum dolore vitae aliquam error laborum ut
-                quidem pariatur.</p>
-        </div>
+            <p class="text">+4 years of professional experience like software web developer. Currently i am woking
+            like fullstack developer, living in bogota, Colombia. i have been working in the construction
+            side creating a diferent solutions across some finland companies</p>
+        </section>
         <div class="experience">
             <h3>Professional Experience</h3>
-            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dolor architecto laboriosam repellat! Error,
-                itaque? Corporis iste animi eum alias voluptates doloribus, ipsum dolore vitae aliquam error laborum ut
-                quidem pariatur.</p>
+            <div class="company">
+                <a target="blank" href="https://ihme3d.com/en/" class="company-name">Ihme3d</a>
+                <span class="text">2020 - current</span>
+            </div>
+            <span class="role">Full Stack Developer</span>
+            <p class="text">
+                I develop the second stage the mainly cost calculator application to another finland company,
+                enabling the users another way to desing, create, plan construction`s projects, setting up the correct location, 
+                using the provider <i>Mapbox</i> also the drag&drop utilities to provide a new user experience,
+                thinking in the posibility to see in the real time the calculation of costs using the structures and 
+                another data like a base.
+            </p>
         </div>
-        <div class="experience">
+        <section class="experience">
             <h3>Education</h3>
-            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dolor architecto laboriosam repellat! Error,
-                itaque? Corporis iste animi eum alias voluptates doloribus, ipsum dolore vitae aliquam error laborum ut
-                quidem pariatur.</p>
-        </div>
-        <div class="projects">
+            <div class="company">
+                <a target="blank" href="https://ihme3d.com/en/" class="company-name">National University of Colombia</a>
+                <span class="text">2015 - 2020</span>
+            </div>
+            <span class="role">Systems and Computer Engineer</span>
+        </section>
+        <section class="projects">
             <h3>Projects</h3>
             <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dolor architecto laboriosam repellat! Error,
                 itaque? Corporis iste animi eum alias voluptates doloribus, ipsum dolore vitae aliquam error laborum ut
                 quidem pariatur.</p>
-        </div>
+        </section>
         <section class="skills">
             <h3>Skills</h3>
             <div class="skills-container">
