move forward react + typescript + vite

--- a/index.html
+++ b/index.html
@@ -1,100 +1,13 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
-
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Portfolio</title>
-    <link rel="icon" type="image/x-icon" href="/assets/code.ico">
-    <link rel="stylesheet" href="style.css">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/css/all.min.css"
-        integrity="sha512-Kc323vGBEqzTmouAECnVceyQqyqdsSiqLQISBL29aUW4U/M7pSPA/gEUZQqv1cwx4OnYxTxve5UMg5GT6L4JJg=="
-        crossorigin="anonymous" referrerpolicy="no-referrer" />
-</head>
-
-<body>
-    <div class="content">
-        <section class="header">
-            <div class="info">
-                <span class="name">Jesus Salcedo</span>
-                <span class="role">Full Stack JavaScript Developer +4 years</span>
-                <span class="location">Bogota, Colombia</span>
-            </div>
-            <img class="image" src="/assets/photo.jpeg" alt="image" height="85" width="80">
-        </section>
-        <section class="about">
-            <h3>About me</h3>
-            <p class="text">+4 years of professional experience like software web developer. Currently i am woking
-            like fullstack developer, living in bogota, Colombia. i have been working in the construction
-            side creating a diferent solutions across some finland companies</p>
-        </section>
-        <div class="experience">
-            <h3>Professional Experience</h3>
-            <div class="company">
-                <a target="blank" href="https://ihme3d.com/en/" class="company-name">Ihme3d</a>
-                <span class="text">2020 - current</span>
-            </div>
-            <span class="role">Full Stack Developer</span>
-            <p class="text">
-                I develop the second stage the mainly cost calculator application to another finland company,
-                enabling the users another way to desing, create, plan construction`s projects, setting up the correct location, 
-                using the provider <i>Mapbox</i> also the drag&drop utilities to provide a new user experience,
-                thinking in the posibility to see in the real time the calculation of costs using the structures and 
-                another data like a base.
-            </p>
-        </div>
-        <section class="experience">
-            <h3>Education</h3>
-            <div class="company">
-                <a target="blank" href="https://ihme3d.com/en/" class="company-name">National University of Colombia</a>
-                <span class="text">2015 - 2020</span>
-            </div>
-            <span class="role">Systems and Computer Engineer</span>
-        </section>
-        <section class="projects">
-            <h3>Projects</h3>
-            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dolor architecto laboriosam repellat! Error,
-                itaque? Corporis iste animi eum alias voluptates doloribus, ipsum dolore vitae aliquam error laborum ut
-                quidem pariatur.</p>
-        </section>
-        <section class="skills">
-            <h3>Skills</h3>
-            <div class="skills-container">
-                <span class="skill-box">
-                    <i class="fa-brands fa-html5"></i>
-                    HTML
-                </span>
-                <span class="skill-box">
-                    <i class="fa-brands fa-css3-alt"></i>
-                    CSS
-                </span>
-                <span class="skill-box">
-                    <i class="fa-brands fa-js"></i>
-                    JavaScript
-                </span>
-                <span class="skill-box">TypeScript</span>
-                <span class="skill-box">MySQL</span>
-                <span class="skill-box">
-                    <i class="fa-brands fa-git-alt"></i>
-                    Git
-                </span>
-                <span class="skill-box">
-                    <i class="fa-brands fa-github"></i>
-                    Github
-                </span>
-                <span class="skill-box">
-                    <i class="fa-brands fa-gitlab"></i>
-                    Gitlab
-                </span>
-                <span class="skill-box">
-                    <i class="fa-brands fa-react"></i>
-                    React</span>
-                <span class="skill-box">
-                    <i class="fa-brands fa-docker"></i>
-                    Docker</span>
-            </div>
-        </section>
-    </div>
-</body>
-
+  <head>
+    <meta charset="UTF-8" />
+    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Porfolio</title>
+  </head>
+  <body>
+    <div id="root"></div>
+    <script type="module" src="/src/main.tsx"></script>
+  </body>
 </html>
